# navi_agent

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  agent_2.py  approval.py  background_review.py  cli.py  compressor.py  context_manager.py  history_utils.py  install.ps1  install.sh  manual_lock_check.py  memory_store.py  model_router.py  paths.py  pyproject.toml  runtime.py  session_store.py  skill_manage.py  system.md  test_split_approval.py  test_var_bypass_defense.py  tool.py
.light_agent/sessions/: index.jsonl
docs/: index.html
navi_agent/: CLAUDE.md  agent_2.py  agent_store.py  approval.py  background_review.py  cli.py  compressor.py  context_manager.py  history_store.py  history_utils.py  interrupt.py  mcp_client.py  mcp_commands.py  memory_store.py  model_router.py  paths.py  plugins.py  prompt_ui.py  runtime.py  session_store.py  skill_manage.py  stream_box.py  sub_agent.py  tool.py  tool_registry.py  ui.py
navi_agent/.claude/: settings.local.json
navi_agent/cli/: chat_controller.py  clipboard_image.py  init_command.py  interrupt_trace.py  main.py  markdown_tables.py  paste_collapse.py  paste_trace.py  prompt_ui.py  terminal_output.py  ui.py
navi_home/: SOUL-Chinese.md  SOUL.md  compact-prompt.md  memory-review-prompt.md  skill-review-prompt.md  system.md
scripts/: sync_navi_home.ps1  sync_navi_home.sh
showcase/: index.html
tests/: test_approval_broker.py  test_background_tasks.py  test_chat_controller_interrupt.py  test_cli_image_input.py  test_compression_e2e.py  test_compressor.py  test_context_manager.py  test_file_write_safety.py  test_gateway_commands.py  test_gateway_qq_context.py  test_gateway_web.py  test_gateway_weixin_media.py  test_goal_mode.py  test_history_store.py  test_hooks.py  test_init_command_lmstudio.py  test_interrupt_chain.py  test_lsp.py  test_memory_store.py  test_model_router.py  test_monitor.py  test_paste_collapse.py  test_paste_trace.py  test_plugins.py  test_prompt_ui.py  test_prompt_ui_paste_trace.py  test_runtime_compression.py  test_runtime_hooks.py  test_runtime_image_input.py  test_runtime_tool_registration.py  test_safe_file.py  test_scheduler.py  test_scheduler_approval.py  test_skill_manage.py  test_slash_commands.py  test_sub_agent.py  test_tool_registry.py  test_tool_serial_order.py  test_version_tracker.py
(+105 files in other folders)
