[project]
name = "navi-agent"
version = "0.1.0"
description = "Navi - a local CLI agent for code, files, and commands."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "langgraph>=0.2.0",
    "typing-extensions>=4.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "psutil>=5.9.0",
]

[project.scripts]
navi = "navi_agent.cli:main"

[tool.setuptools.packages.find]
include = ["navi_agent*"]
exclude = ["archive_unrelated*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
