[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "navi-agent"
version = "0.1.0"
description = "Navi - your local project navigator"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "langgraph>=0.2.0",
    "rich>=13.0",
    "typer>=0.12.0",
    "prompt_toolkit>=3.0",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "typing_extensions>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyyaml>=6.0",
]

[project.scripts]
navi = "navi_agent.cli:main"

[tool.setuptools.packages.find]
include = ["navi_agent*"]
