[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "navi-agent"
version = "0.1.0"
description = "Navi - your local project navigator"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "rich>=13.0",
    "typer>=0.12.0",
    "prompt_toolkit>=3.0",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "typing_extensions>=4.0",
    "aiohttp>=3.9",
    "certifi>=2024.0",
    "cryptography>=41.0",
    "qrcode>=7.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.4.0",
]

[project.scripts]
navi = "navi_agent.cli.main:main"

[tool.setuptools.packages.find]
include = ["navi_agent*"]

[tool.setuptools.package-data]
navi_agent = [
    "templates/navi_home/*.md",
    "templates/navi_home/*.txt",
    "templates/skills/**/*",
    "gateway/webui/*",
]
